[add]:调整bean 注入的方式

--- a/nat-plus-server/src/main/resources/application.yml
+++ b/nat-plus-server/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
       max-wait: 60000
       test-on-return: false
   application:
-    name: demo1-dubbo-provider
+    name: nat-plus-server
   aop:
     auto: true
     proxy-target-class: true
