--- a/nat-plus-server/src/main/resources/config.properties
+++ b/nat-plus-server/src/main/resources/config.properties
@@ -1,6 +1,7 @@
-#¹ÜÀíÔ±ÕËºÅÃÜÂë
+#ï¿½ï¿½ï¿½ï¿½Ô±ï¿½Ëºï¿½ï¿½ï¿½ï¿½ï¿½
 admin.username=admin
 admin.password=123456
 
 #jwt
 jwt.key=123456444
+jwt.ttl=1800
